# thetis

./: .gitignore  _thetis_build_backend.py  _thetis_version.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: core.yml  pr.yml  push.yml  weekly-release.yml
docs/source/: developer_notes.rst  download.rst
examples/headland_inversion/: README.md  forward_run.py  inverse_problem.py  model_config.py  plot_observed_elev.py  plot_velocity_progress.py
examples/north_sea/: README.md  generate_mesh.py  north_sea.msh
examples/north_sea/mesh_data/: Boundary.dbf  Boundary.shp  Boundary.shx
examples/tohoku_inversion/: inverse_problem.py
test/examples/: test_examples.py
test_adjoint/: conftest.py
test_adjoint/examples/: test_adjoint_examples.py
thetis/: __init__.py  exporter.py  inversion_tools.py
