[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
# This wrapper uses setuptools' normal build logic, but lets setuptools-scm
# import _thetis_version.py to determine the version during installation.
# Using setuptools.build_meta directly does not put this checkout on the
# build import path.
build-backend = "_thetis_build_backend"
backend-path = ["."]

[project]
name = "thetis"
dynamic = ["version"]
dependencies = [
  "netCDF4",
  "pylit",
  "pyproj",
  "pytz",
  "scipy",
  "traitlets",
  "uptide",
  "vtk",
  "pyyaml",
]
authors = [
  {name = "Tuomas Karna", email = "tuomas.karna@gmail.com" },
]
description = "Finite element ocean model"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://thetisproject.org"
Repository = "https://github.com/thetisproject/thetis.git"

[tool.setuptools]
packages = ["thetis", "test", "examples"]

[tool.setuptools_scm]
tag_regex = "^(?P<version>[0-9]+\\.[0-9]+(?:\\.[0-9]+(?:\\.[0-9]+)?|\\.post[0-9]+)?)$"
version_scheme = "_thetis_version:thetis_version_scheme"
local_scheme = "no-local-version"
fallback_version = "0+unknown"

[project.optional-dependencies]
# Dependencies needed to build the docs
docs = [
  "bibtexparser",
  "matplotlib",  # needed to resolve API
  "numpydoc",
  "pylit",
  "sphinx<8.2.0",  # https://github.com/firedrakeproject/firedrake/issues/4059
  "sphinx-autobuild",
  "sphinx-reredirects",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-jquery",
  "sphinxcontrib-svg2pdfconverter",
  "sphinxcontrib-youtube",
  "vtk",  # needed to resolve API
]

# Developer/test tooling (not required for end users)
lint = [
  "flake8",
]

test = [
  "ipympl",  # needed for notebook testing
  "matplotlib",
  "mpi-pytest>=2026.0",
  "nbval",
  "pylit",
  "pytest",
  "pytest-timeout",
  "pytest-xdist",
  "vtk",
  "decorator<=4.4.2",  # Firedrake
]
